# OpenCaveGame

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Start.cpp
blaze3dcpp/: CMakeLists.txt
blaze3dcpp/include/platform/: DisplayData.h  GLX.h  Window.h  WindowEventHandler.h
blaze3dcpp/include/utils/: SString.h
blaze3dcpp/platform/: CMakeLists.txt  GLX.cpp  Window.cpp
